<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="50dp"
    tools:context=".SecondFragment">Joao

    <TextView
        android:id="@+id/txtOla"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/label_ola"
        android:textSize="32dp" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/txtNameResult"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="24dp" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/txtTextoOutro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/label_txtTextoOutro"
        android:textSize="24dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="30dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/button_second"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:layout_gravity="bottom" />

    </LinearLayout>

</LinearLayout>



